--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <a href="#" class="image fit"><img src="images/myportfolio.png" alt="" /></a>
                         <p>This is my very own portfolio made with Html, CSS, SASS and JavaScript.</p>
                         <ul class="actions special">
-                            <li><a href="#" class="button">VISIT THE WEBSITE</a></li>
+                            <li><a href="https://ifedolapo01.github.io/www.ifedolapoajayi.github.io/" class="button">VISIT THE WEBSITE</a></li>
                         </ul>
                         <hr>
                         <header>
