--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                         </ul>
                         <hr>
                         <header>
-                            <h2>Event Management Website</h2>
+                            <h2>React Notes Application</h2>
                         </header>
                         <a href="#" class="image fit"><img src="images/eventmanagementwebsite.png" alt="" /></a>
-                        <p>A school project that required a team of 5 people to create. Created using HTML, CSS and JavaScript, also using Geolocation API. This website is still undergoing development.</p>
+                        <p>A react note application. I created an application in React, where the users can write or create their notes, and they can save their written notes after clicking the save button and the notes will be visible within the list of notes available. Users can also delete their notes by clicking a delete icon on the notes boxes. I added several functionalities such as one that the users can also search their notes by typing in the search box, categorize notes in folders.
                         <ul class="actions special">
-                            <li><a href="https://ifedolapo01.github.io/jadoneventmanagement.github.io/" class="button">VISIT THE WEBSITE</a></li>
+                            <li><a href="https://ifedolapo01.github.io/my-react-notes-app.github.io//" class="button">VISIT THE WEBSITE</a></li>
                         </ul>
                     </section>
                 </div>
