--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <ul>
                     <li><a href="#intro">About</a></li>
                     <li><a href="#work">Work</a></li>
-                    <li><a href="Ifedolapo-Ajayi-Resume Android Front-end.pdf">Resume</a></li>
+                    <li><a href="Ifedolapo-Ajayi-Resume.pdf">Resume</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <!--<li><a href="#elements">Elements</a></li>-->
                 </ul>
