--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
             <article id="intro">
                 <h2 class="major">About Me</h2>
                 <span class="image main"><img src="images/pic01.jpg" alt="" /></span>
-                <p>Hi, I am Ifedolapo Ajayi. I am a self-driven software engineering student with some experience in developing user-friendly software applications, coding and testing features, and providing engineering support.
-                    <br> <br> I am skilled in different software development tools and I would perform well in a team.
-                    <br> <br> I am a passionate individual with an ongoing degree focused in Software Engineering from Aptech Computer Education.
+                <p>Hi, I am Ifedolapo Ajayi. I am an enthusiastic and motivated beginner in Android Development seeking opportunities to apply skills and knowledge gained through academic coursework and hands-on experience in developing an Android City Bus Management App. 
+                    <br> <br> Eager to contribute to dynamic development projects and further enhance skills in mobile application development.
+                    <br> <br> I am a passionate individual with an Advanced Diploma in Software Engineering from Aptech Computer Education.
                     <br> <br> By the way, check out my <a href="#work">awesome work</a>.</p>
                 <p></p>
             </article>
